# constatus

./: Cargo.toml  README.md  flake.nix
src/: bar.rs  color.rs  cost.rs  forge.rs  gitlab.rs  icons.rs  main.rs
