[package]
name = "constatus"
version = "0.3.0"
edition = "2024"
description = "A configurable status line for Claude Code"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
# Blocking HTTP for the optional GitLab API. rustls (default `tls` feature)
# avoids a system OpenSSL runtime dependency; gzip is dropped to stay lean.
ureq = { version = "2", default-features = false, features = ["tls"] }
